Set SAVENAME for rmdir and remove.

Addresses an easy part of PR kern/38188